--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/multer-gridfs-storage": "^4.0.5",
+    "mongo-gridfs": "^1.1.0",
     "mongoose": "^6.10.1",
+    "multer-gridfs-storage": "^5.0.2",
     "node-html-parser": "^6.1.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
